# sonify

./: .create_screenshot  .environment.yml  .gitignore  .readthedocs.yml  LICENSE.txt  README.md  README.rst  create_screenshot  environment.yml  pyproject.toml  requirements.txt  setup.py  sonify.py  testing.yml
.github/workflows/: build.yml  python-package-conda.yml  test-workflows.yml  test.yml  testing.yml
doc/: conf.py  index.rst  requirements.txt  sonify.rst
doc/_templates/: breadcrumbs.html  footer.html  layout.html
sonify/: __init__.py  sonify.py
sonify/fonts/: OFL.txt
tests/: test_cli.py  test_ffmpeg_combine.py  test_resolution.py  test_spectrogram.py
