[project]
name = "sonify"
dynamic = ["version"]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project.scripts]
sonify = "sonify.sonify:main"

[tool.setuptools.packages]
find = {}

[tool.black]
skip-string-normalization = true

[tool.isort]
profile = "black"
conda_env = "sonify"
